Refactor core utility classes: enhance type safety, simplify validation logic, fix method contracts, and improve exception handling and logging. Add test coverage for `BeanUtils` and `ListConversionUtils`.